--- a/first-angular/package.json
+++ b/first-angular/package.json
@@ -22,6 +22,7 @@
     "@angular/ssr": "^19.2.9",
     "bootstrap": "^5.3.5",
     "express": "^4.18.2",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
